package com.example.shopapp.presentation.common

object Constants {
    //TEST TAGS
    const val ACTIVATE_COUPON_BTN: String = "Activate coupon button"
    const val MY_PROFILE_BTN: String = "My profile button"
    const val ORDERS_BTN: String = "Orders button"
    const val LOGOUT_BTN: String = "Sign out button"
    const val LOGIN_CONTENT: String = "Login content"
    const val LOGIN_TOP_BAR: String = "Login top bar"
    const val LOGIN_COLUMN: String = "Login column"
    const val LOGIN_EMAIL_TF: String = "Login email"
    const val LOGIN_PASSWORD_TF: String = "Login password"
    const val LOGIN_BTN: String = "Login button"
    const val LOGIN_SIGNUP_BTN: String = "Go to sign up screen button"
    const val LOGIN_CPI: String = "Login circular progress indicator"
    const val PRODUCT_DETAILS_CONTENT: String = "Product details content"
    const val PRODUCT_DETAILS_COLUMN: String = "Product details column"
    const val PRODUCT_DETAILS_ADD_TO_CART_BTN: String = "Add to cart"
    const val HOME_CONTENT: String = "Home content"
    const val HOME_TOP_BAR: String = "Home top bar"
    const val HOME_LAZY_COLUMN: String = "Home lazy column"
    const val HOME_BANNER: String = "Home banner"
    const val ACCOUNT_CONTENT: String = "Account content"
    const val ACCOUNT_TOP_BAR: String = "Account top bar"
    const val COUPON_ITEM_: String = "Coupon item for "
    const val COUPON_ITEM_10: String = "Coupon item for 10"
    const val COUPON_ITEM_20: String = "Coupon item for 20"
    const val COUPON_ITEM_50: String = "Coupon item for 50"
    const val ACCOUNT_LAZY_ROW: String = "Account lazy row"
    const val ACCOUNT_POINTS_CARD: String = "Account points card"
    const val CATEGORY_CONTENT: String = "Category content"
    const val CATEGORY_TOP_BAR: String = "Category top bar"
    const val CATEGORY_SORT_SECTION: String = "Category sort section"
    const val CATEGORY_FILTER_SECTION: String = "Category filter section"
    const val CATEGORY_CHECKBOXES: String = "Category checkboxes"
    const val CATEGORY_PRICE_SLIDER: String = "Category price slider"
    const val CATEGORY_PRICE_SLIDER_ITEM: String = "Category price slider item"
    const val CATEGORY_LAZY_VERTICAL_GRID: String = "Category lazy vertical grid"
    const val CATEGORY_LIST_CONTENT: String = "Category list content"
    const val CATEGORY_LIST_TOP_BAR: String = "Category list top bar"
    const val CATEGORY_LIST_LAZY_COLUMN: String = "Category list lazy column"
    const val CATEGORY_NAME_1: String = "All"
    const val CATEGORY_NAME_2: String = "Men's clothing"
    const val CATEGORY_NAME_3: String = "Women's clothing"
    const val CATEGORY_NAME_4: String = "Jewelery"
    const val CATEGORY_NAME_5: String = "Electronics"
    const val CATEGORY_CPI: String = "Category circular progress indicator"
    const val NOT_LOGGED_IN_DIALOG: String = "Not logged in dialog"
    const val FAVOURITES_CONTENT: String = "Favourites content"
    const val FAVOURITES_TOP_BAR: String = "Favourites top bar"
    const val FAVOURITES_LAZY_VERTICAL_GRID: String = "Favourite lazy vertical grid"
    const val FAVOURITES_CPI: String = "Favourites circular progress indicator"
    const val PRODUCT_DETAILS_TOP_BAR: String = "Product details top bar"
    const val PRODUCT_ITEM_TITLE: String = "Product item title"
    const val PRODUCT_DETAILS_IMAGE_BOX: String = "Product details image item"
    const val PRODUCT_DETAILS_BOTTOM_SHEET: String = "Product details bottom sheet"
    const val PRODUCT_DETAILS_CPI: String = "Product details circular progress indicator"
    const val SIGNUP_CONTENT: String = "Signup content"
    const val SIGNUP_TOP_BAR: String = "Signup top bar"
    const val SIGNUP_COLUMN: String = "Signup column"
    const val SIGNUP_EMAIL_TF: String = "Signup email"
    const val SIGNUP_PASSWORD_TF: String = "Signup password"
    const val SIGNUP_CONFIRM_PASSWORD_TF: String = "Signup confirm password"
    const val SIGNUP_FIRSTNAME_TF: String = "Signup first name"
    const val SIGNUP_LASTNAME_TF: String = "Signup last name"
    const val SIGNUP_STREET_TF: String = "Signup street"
    const val SIGNUP_CITY_TF: String = "Signup city"
    const val SIGNUP_ZIP_CODE_TF: String = "Signup zip code"
    const val SIGNUP_BTN: String = "Signup button"
    const val SIGNUP_CPI: String = "Signup circular progress indicator"
    const val USER_NOT_LOGGED_IN_CONTENT: String = "User not logged in content"
    const val CART_CONTENT: String = "Cart content"
    const val CART_TOP_BAR: String = "Cart top bar"
    const val CART_LAZY_COLUMN: String = "Cart lazy column"
    const val PLUS_BTN: String = "Plus button"
    const val MINUS_BTN: String = "Minus button"
    const val ORDER_BTN: String = "Order button"
    const val ORDER_PLACED_DIALOG: String = "Order placed dialog"
    const val CART_CPI: String = "Cart circular progress indicator"
    const val CART_TOTAL_AMOUNT_SECTION: String = "Cart total amount section"
    const val CART_TOTAL_AMOUNT_COLUMN: String = "Cart total amount row"
    const val ORDERS_CONTENT: String = "Orders content"
    const val ORDERS_LAZY_COLUMN: String = "Orders lazy column"
    const val ORDERS_TOP_BAR: String = "Orders top bar"
    const val SORT_BTN: String = "Sort button"
    const val EXPAND_OR_COLLAPSE_BTN: String = "Expand or collapse button"
    const val ORDERS_SORT_SECTION: String = "Orders sort section"
    const val ORDERS_CPI: String = "Orders circular progress indicator"
    const val PROFILE_CONTENT: String = "Profile content"
    const val PROFILE_COLUMN: String = "Profile column"
    const val PROFILE_TOP_BAR: String = "Profile top bar"
    const val PROFILE_FIRSTNAME_TF: String = "Profile first name tf"
    const val PROFILE_LASTNAME_TF: String = "Profile last name tf"
    const val PROFILE_STREET_TF: String = "Profile street tf"
    const val PROFILE_CITY_TF: String = "Profile city tf"
    const val PROFILE_ZIP_CODE_TF: String = "Profile zip code tf"
    const val PROFILE_CPI: String = "Profile circular progress indicator"
    const val SAVE_BTN: String = "Save button"

    //Content Description
    const val CART_BTN: String = "Cart button"
    const val SORT_AND_FILTER_BTN: String = "Sort and filter button"
    const val FAVOURITES_BTN: String = "Favourite button"
    const val IMAGE: String = "Image"
    const val GO_BACK_BTN: String = "Go back button"
    const val ADD_TO_CART_BTN: String = "Add to cart button"
    const val DELETE_BTN: String = "Delete button"

    //Snackbar
    const val snackbarMessage: String = "Cart item deleted"
    const val snackbarActionLabel: String = "Undo"

    //TEST VALUES
    const val productDescription: String = "95%Cotton,5%Spandex, Features: Casual, Short Sleeve, Letter Print,V-Neck,Fashion Tees, The fabric is soft and has some stretch., Occasion: Casual/Office/Beach/School/Home/Street. Season: Spring,Summer,Autumn,Winter."

    //IMAGE SIZE
    const val productItemImageWidth: Int = 180
    const val productItemImageHeight: Int = 200
    const val cartProductItemImageWidth: Int = 60
    const val cartProductItemImageHeight: Int = 80

    //VALUES
    const val passwordMinLength: Int = 8
    const val zipCodeLength: Int = 6

    //LOGS
    const val TAG: String = "TAG"
    const val ACCOUNT_VM: String = "Account ViewModel"
    const val CATEGORY_VM: String = "Category ViewModel"
    const val CATEGORY_LIST_VM: String = "CategoryList ViewModel"
    const val FAVOURITES_VM: String = "Favourite ViewModel"
    const val HOME_VM: String = "Home ViewModel"
    const val PRODUCT_DETAILS_VM: String = "ProductDetails ViewModel"
    const val LOGIN_VM: String = "LoginScreen ViewModel"
    const val SIGNUP_VM: String = "SignupScreen ViewModel"
    const val CART_VM: String = "CartScreen ViewModel"
    const val ORDERS_VM: String = "Orders ViewModel"
    const val PROFILE_VM: String = "Profile ViewModel"
    const val ACCOUNT_SCREEN_LE: String = "AccountScreen Launched Effect"
    const val CATEGORY_SCREEN_LE: String = "CategoryScreen Launched Effect"
    const val CATEGORY_LIST_SCREEN_LE: String = "CategoryListScreen Launched Effect"
    const val FAVOURITES_SCREEN_LE: String = "FavouriteScreen Launched Effect"
    const val HOME_SCREEN_LE: String = "HomeScreen Launched Effect"
    const val PRODUCT_DETAILS_SCREEN_LE: String = "ProductDetailsScreen Launched Effect"
    const val LOGIN_SCREEN_LE: String = "LoginScreen Launched Effect"
    const val SIGNUP_SCREEN_LE: String = "SignupScreen Launched Effect"
    const val CART_SCREEN_LE: String = "CartScreen Launched Effect"
    const val ORDERS_SCREEN_LE: String = "OrdersScreen Launched Effect"
    const val PROFILE_SCREEN_LE: String = "ProfileScreen Launched Effect"

    //ERRORS
    const val specialChars: String = "!@#$%^&*(){}[]:;\"'<,>.?/~`'\\|_=+"
    const val specialCharsStreet: String = "~`!@#$%^&*()_=+{}[]|\\:;\"<>,.?"
    const val specialCharsCity: String = "~`!@#$%^&*()_=+{}[]|\\:;\"<>,.?/"
    const val specialCharsZipCode: String = "~`!@#$%^&*()_=+{}[]|\\:;\"<>,.?/'"
    const val emailEmptyError: String = "Email can't be empty"
    const val passwordEmptyError: String = "Password can't be empty"
    const val shortPasswordError: String = "Password is too short"
    const val passwordContainsAtLeastOneDigitError: String = "Password should have at least one digit"
    const val passwordContainsAtLeastOneCapitalLetterError: String = "Password should have at least one capital letter"
    const val passwordContainsAtLeastOneSpecialCharError: String = "Password should have at least one special character"
    const val confirmPasswordError: String = "Passwords don't mach"
    const val fieldEmptyError: String = "Field can't be empty"
    const val fieldContainsDigitsError: String = "No digits allowed for this field"
    const val fieldContainsSpecialCharsError: String = "Special characters not allowed for this field"
    const val streetEmptyError: String = "Street can't be empty"
    const val streetContainsAtLeastOneDigitError: String = "Street should have at least one digit"
    const val fieldContainsAtLeastOneLetterError: String = "Field should have at least one letter"
    const val cityEmptyError: String = "City can't be empty"
    const val zipCodeEmptyError: String = "Zip code can't be empty"
    const val zipCodeBadFormat: String = "Bad format"

    //FIREBASE
    const val USERS_COLLECTION: String = "users"
    const val FAVOURITES_COLLECTION: String = "favourites"
    const val CARTS_COLLECTION: String = "carts"
    const val ORDERS_COLLECTION: String = "orders"
    const val COUPONS_COLLECTION: String = "coupons"
}